--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,15 @@ dependencies:
   # just_audio: ^0.9.36
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
