--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/audio/
+    - assets/audio/meditation_bells.mp3
+    - assets/audio/ney-flute.mp3
+    - assets/audio/calm-zen-river-flowing.mp3
+    - assets/audio/om_tone.mp3
