--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   hive: ^2.2.3
@@ -33,3 +34,4 @@ flutter:
     - assets/audio/ney-flute.mp3
     - assets/audio/calm-zen-river-flowing.mp3
     - assets/audio/om_tone.mp3
+    - .env
